# linksaver2

./: .gitignore  LICENSE  README.md  l2.py  linksaver.json  pyproject.toml  shema.json
.samengine/: samfile
src/l2/: cli.py
src/linksaver/: ansicolors.py  cli.py  config.py  splitter.py  version.py
