[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linksaver"
version = "0.1.0"
description = "a tool to save your links"
readme = "README.md"
requires-python = ">=3.10"
# dependencies = [
#     "requests>=2.32"
# ]

[project.scripts]
l2 = "l2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
